perf: paralelizar chamadas HTTP da ContaAzul e implementar cache de curta duracao